--- a/ocaml_http.opam
+++ b/ocaml_http.opam
@@ -5,13 +5,13 @@ description: "A longer description"
 maintainer: ["Maintainer Name"]
 authors: ["Author Name"]
 license: "LICENSE"
-tags: ["topics" "to describe" "your" "project"]
 homepage: "https://github.com/username/reponame"
 doc: "https://url/to/documentation"
 bug-reports: "https://github.com/username/reponame/issues"
 depends: [
-  "ocaml"
   "dune" {>= "3.11"}
+  "cohttp-eio"
+  "eio_main"
   "odoc" {with-doc}
 ]
 build: [
